# frappe_s3_integration

./: .gitignore  AGENTS.md  README.md  frappe_s3_integration.md  pyproject.toml
.github/workflows/: deploy.yml
docs/: RESTORE.md
docs/superpowers/plans/: 2026-06-22-s3-integration-overhaul.md
docs/superpowers/specs/: 2026-06-22-s3-integration-overhaul-design.md
frappe_s3_integration/: hooks.py  local_fallback.py  modules.txt  overrides.py  patches.txt  pdf_print.py  s3_normalize.py
frappe_s3_integration/fixtures/: custom_field.json
frappe_s3_integration/frappe_s3_integration/: backfill.py  backup.py  process_scheduler.py  test_backfill.py  test_backup.py  test_delete_guard.py  test_local_fallback.py  test_process_scheduler.py  test_s3_normalize.py  test_upload_key.py
frappe_s3_integration/frappe_s3_integration/doctype/aws_s3_settings/: aws_s3_settings.js  aws_s3_settings.json  aws_s3_settings.py  test_aws_s3_settings.py
frappe_s3_integration/frappe_s3_integration/doctype/aws_s3_settings_bucket_detail/: aws_s3_settings_bucket_detail.json  aws_s3_settings_bucket_detail.py
frappe_s3_integration/frappe_s3_integration/doctype/file_image_settings/: file_image_settings.js  file_image_settings.json  file_image_settings.py  test_file_image_settings.py
frappe_s3_integration/frappe_s3_integration/image_optimization/: optimization_scheduler.py
frappe_s3_integration/patches/v1_0/: migrate_s3_urls_to_proxy.py  re_migrate_s3_urls_with_filename.py
frappe_s3_integration/s3_core/: __init__.py
(+6 files in other folders)
