[project]
name = "frappe_s3_integration"
authors = [
    { name = "Sakthi Kumar P", email = "sakthi123msd@gmail.com"}
]
description = "Frappe application to integrate file operations with files"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "boto3==1.37.37",
    "botocore==1.37.37",
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
